# triton-serve

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  index.html  pyproject.toml  requirements.txt  test.json
.github/workflows/: test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 3373b9da9862_init.py  48ee7ea316c5_populate.py  915f97395c0d_init.py  af7db8f0dc88_init.py  e6a4d97fbbb8_init.py
containers/backend/: Dockerfile
containers/backend/serve/: asgi.py  factory.py
containers/backend/serve/api/models/: __init__.py  domain.py  dto.py
containers/backend/serve/api/services/: __init__.py  domain.py  dto.py
containers/backend/serve/common/: constants.py  utils.py
containers/celery/: Dockerfile
containers/sentinel/: Dockerfile  requirements.txt
containers/traefik/: Dockerfile  traefik.yml
containers/traefik_config/static/: traefik.yml
containers/triton/: Dockerfile  docker-entrypoint.sh  publish.sh
data/: README.md
envs/: .gitignore  env.template
keys/: index.html
models/: index.html
quickstart/: index.html
search/: search_index.json
services/: index.html
src/triton_serve/: __init__.py  __main__.py  extensions.py  factory.py  security.py  tasks.py  wsgi.py
src/triton_serve/api/: dto.py  schema.py
src/triton_serve/api/auth/: __init__.py  domain.py
src/triton_serve/api/models/: __init__.py  domain.py
src/triton_serve/api/operations/: __init__.py  domain.py
src/triton_serve/api/services/: __init__.py  domain.py  resources.py  traefik_config.py
src/triton_serve/config/: __init__.py  celery.py  instance.py  schema.py  traefik.py
src/triton_serve/database/: __init__.py  checks.py  connection.py  crud.py  dto.py  initilization.py  manage.py  model.py  models.py  schema.py  schemas.py  session.py  validation.py
src/triton_serve/database/initialization/: checks.py  ddl.sql  initialize.py
src/triton_serve/database/queries/: devices.py  machines.py  service.py  services.py
src/triton_serve/storage/: __init__.py  base.py  extractors.py  local.py  sources.py  validation.py
src/triton_serve/utils/: utils.py
tests/: .gitignore  conftest.py  model_test.py  service_test.py  test_api_key.py  test_auth.py  test_base.py  test_models.py  test_services.py
tests/data/model_repository/ensemble/: config.pbtxt
tests/data/model_repository/ensemble_py_step/: config.pbtxt
tests/data/model_repository/ensemble_py_step/1/: model.py
tests/data/model_repository/wrong_name/: config.pbtxt
