[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-serve"
authors = [
    {name = "Edoardo Arnaudo", email = "edoardo.arnaudo@linksfoundation.com"},
    {name = "Lorenzo D'Amico", email = "lorenzo.damico@linksfoundation.com"}
]
description = "Deployment framework based on NVIDIA Triton Inference Server"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

# Dynamic metadata allow to assign the version number to the package at build time.
# The location of the version and the dependecies is specified in the [tool.setuptools.dynamic] section.
dynamic = ["version", "dependencies"]

# Optional dependencies, use this to include everything that the project needs to run in development.
# These can be installed by specifying for instance `pip install -e .[dev|docs|test]`
[project.optional-dependencies]
# Add development dependencies here
dev = [
    "black >= 23.0.0, < 24",
    "isort >= 5.1.0, < 6.0.0",
    "gitchangelog >= 3.0.4, < 4.0.0",
    "ruff >= 0.0.1, < 0.1.0",
]
# Add documentation dependencies here
docs = [
    "mkdocs-material >= 9.2.0, < 10",
    "mdx-include >= 1.4.0, < 2",
]
# Add testing dependencies here
test = [
    "coverage >= 7.3.0, < 8",
    "httpx >= 0.25.0, < 1",
    "pytest >= 7.4.0, < 8",
    "pytest-cov >= 4.1.0, < 5",
    "pytest-dependency >= 0.5.1, < 1",
    "pytest-order >= 1.2.0, < 2",
    "requests >= 2.32.0, < 3",
    "celery >=5.4.0,<6.0.0",
    "python-dateutil >= 2.9.0, < 3.0.0"
]

# Uncomment this section if you intend to use the package as a CLI.
# Using the __main__.py file, the package is already executable with `python -m package_name`.
# However, the following section allows a nicer invocation using the `package_name` command directly.
# [project.scripts]
# package_name = "triton-serve"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = {attr = "triton_serve.__version__"}
dependencies = {file = "requirements.txt"}

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119
src = ["src"]
select = ["E", "F", "UP"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
