[project]
name = "triton-serve"
version = "0.4.2"
authors = [
    { name = "Edoardo Arnaudo", email = "edoardo.arnaudo@linksfoundation.com" },
    { name = "Lorenzo D'Amico", email = "lorenzo.damico@linksfoundation.com" },
]
description = "Deployment framework based on NVIDIA Triton Inference Server"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.2",
    "docker>=7.1.0",
    "fastapi>=0.135.1",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = ["gitchangelog>=3.0.4", "pyright>=1.1.408", "ruff>=0.5.5"]
docs = ["mkdocs-material>=9.2.0", "mdx-include>=1.4.0"]
test = [
    "coverage>=7.3.0",
    "pytest>=8.3.0",
    "pytest-cov>=7.0.0",
    "pytest-dependency>=0.6.0",
    "pytest-order>=1.2.0",
    "requests>=2.32.0",
    "python-dateutil>=2.9.0",
]
all = [
    { include-group = "dev" },
    { include-group = "docs" },
    { include-group = "test" },
]

# Uncomment this section if you intend to use the package as a CLI.
# [project.scripts]
# package_name = "triton-serve"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 119

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
